<resources>
    <string name="app_name">QuietPDF</string>
    <string name="open_pdf">Open PDF</string>
    <string name="home_title">Your PDFs stay on this device</string>
    <string name="home_description">Choose a PDF to open it privately. QuietPDF does not upload your documents.</string>
    <string name="opening_pdf">Opening PDF…</string>
    <string name="selected_pdf">Selected PDF</string>
    <string name="error_permission_denied">QuietPDF no longer has permission to open this file. Choose it again.</string>
    <string name="error_file_unavailable">This PDF is no longer available. Check that it has not been moved or deleted.</string>
    <string name="error_corrupted_pdf">This file is not a readable PDF. It may be damaged or incomplete.</string>
...
    <string name="images_to_pdf">Images to PDF</string>
    <string name="images_to_pdf_creating">Creating a PDF from %1$d images…</string>
    <string name="images_to_pdf_invalid_image">One of the selected images could not be read. Choose supported images and try again.</string>
    <string name="images_to_pdf_permission_denied">QuietPDF lost access to an image or the save location. Choose the images again.</string>
    <string name="images_to_pdf_memory_error">These images need more memory than is available. Close other apps or choose smaller images.</string>
    <string name="images_to_pdf_save_error">The PDF could not be saved. Choose another location and try again.</string>
    <string name="dismiss">Dismiss</string>
    <string name="images_pdf_layout">PDF layout</string>
    <string name="images_pdf_layout_count">Choose how %1$d images will be placed.</string>
    <string name="page_size">Page size</string>
    <string name="a4">A4</string>
    <string name="letter">Letter</string>
    <string name="orientation">Orientation</string>
...
